AlertDialog for user Removal Created, DatabaseHelper slightly optimized

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
         <item>Koordynator</item>
         <item>Manager</item>
     </string-array>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
