Date In Schedule and avability handling added, some Activities tested, mooore funcs in DatabaseHelper, one particularry interesting getDataSQL - to get data by sql querry

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="hours_count">Ilość godzin</string>
     <string name="how_to_salary">Notka: Pensja = ilość godzin * stawka</string>
     <string name="edit_rate">Edytuj stawkę</string>
+    <string name="schedule">Grafik</string>
 </resources>
