--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="how_to_salary">Notka: Pensja = ilość godzin * stawka</string>
     <string name="edit_rate">Edytuj stawkę</string>
     <string name="schedule">Grafik</string>
+    <string name="parcel_list">Lista paczek</string>
 </resources>
