--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ParcelDelivery</string>
+    <string name="app_name">Marmot Express</string>
     <string-array name="array_name">
         <item>Kurier</item>
         <item>Magazynier</item>
