Login activity design

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="schedule">Grafik</string>
     <string name="parcel_list">Lista paczek</string>
     <string name="my_account">Moje konto</string>
+
+    <string name="hintEmail"><b>EMAIL</b></string>
+    <string name="hintPass"><b>HASŁO</b></string>
 </resources>
