Change password and main courier and storekeeper activities design + small fixes

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
 
     <string name="hintEmail"><b>EMAIL</b></string>
     <string name="hintPass"><b>HASŁO</b></string>
+    <string name="hintNewPass"><b>NOWE HASŁO</b></string>
+    <string name="hintOldPass"><b>STARE HASŁO</b></string>
+    <string name="hintConfPass"><b>POTWIERDŹ HASŁO</b></string>
 </resources>
