ekran detali paczki funkcjonalność

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="hintNewPass"><b>NOWE HASŁO</b></string>
     <string name="hintOldPass"><b>STARE HASŁO</b></string>
     <string name="hintConfPass"><b>POTWIERDŹ HASŁO</b></string>
+    <string name="buttonChangeStatus"><b>Ustaw Status</b></string>
 </resources>
