Added Button( NOT PROGRAMMED ) for myAccount for all type of users. User can watch his stats ( if the button is programmed ) - in Manager it is alredy happening

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="day_name">Dzień Tygodnia</string>
     <string name="no_data">Brak Danych</string>
     <string name="week">Tydzień</string>
+    <string name="edit_schedule">Edytuj grafik</string>
+    <string name="check_availability">Sprawdź dostępność</string>
 </resources>
