Availability button is switching between Availability and schedule

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="week">Tydzień</string>
     <string name="edit_schedule">Edytuj grafik</string>
     <string name="check_availability">Sprawdź dostępność</string>
+    <string name="availability">Dostępność</string>
+    <string name="check_schedule">Sprawdź grafik</string>
 </resources>
