w ekranie detali paczki znajduje się przycisk usuwania

--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="check_availability">Sprawdź dostępność</string>
     <string name="availability">Dostępność</string>
     <string name="check_schedule">Sprawdź grafik</string>
+    <string name="buttonRemoveParcel">Usuń Paczkę</string>
 </resources>
