--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="presence_is_set">Obecność już dodana</string>
     <string name="not_working">Dziś nie pracujesz</string>
     <string name="buttonRemoveParcel">Usuń Paczkę</string>
+    <string name="edit_availability">Edytuj Dostępność</string>
 </resources>
