--- a/ParcelDelivery/app/src/main/res/values/strings.xml
+++ b/ParcelDelivery/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="not_working">Dziś nie pracujesz</string>
     <string name="buttonRemoveParcel">Usuń Paczkę</string>
     <string name="edit_availability">Edytuj Dostępność</string>
+    <string name="set_previous">Ustaw poprzedni</string>
 </resources>
